1.0.0-rc2
====================

 * Fixed some minor issues with the relative url and CMF uid handling in
   ATFavorite.
   [tiran]

 * Added AT and CMF uid migration to the migration system.
   [tiran]

 * Fixed the unit test fixture and ATFavorite unit tests. Now tests aren't
   running as Manager only when really needed.
   [tiran]

1.0.0-rc1 2005-07-23
====================

 * Fixed error in version parsing which somehow made portal_types disappear.
   [alecm]

 * Enabled swallowResizeExceptions by default and added warning that original
   image resizing destroies the exif information before the data is saved.
   [tiran]
 
 * Fixed spelling error in a security declaration of ATTopic.
   [tiran]

 * Fixed critical migration issue. Locally added roles and locally changed
   permissions are now migrated. Also added unit tests to verify the 
   migration.
   [tiran]

 * Cleanup up unit tests and logging to reduce the noise
   [tiran]

 * Removed 'MakerNote JPEGThumbnail' from the exif tags. Some cameras might
   store the thumbnail in this tag.
   [tiran]

 * Removed unused customization policy including unit test. Plone 2.1 always
   installing ATCT.
   [tiran]

 * Fixed 4330 Inter-version ATCT migration fails to migrate types
   to CMFDynamicViewFTI. Migration to the new FTI is part of the version
   migration again.
   [tiran]
   
 * Added migration step + unit test for '(selected layout)' change.
   [tiran]
   
 * Optimized getRawRelatedItems index addition. There is no need to reindex
   the *whole* catalog when adding a *single* index.
   [tiran]

 * Made the 'view' method aliases point to '(selected layout)' instead of
   '(default view)'. This assures consistency with previous behaviour,
   so that /view at the end of a URL always gets the item itself, ignoring
   any default-page that may be set. Note that the 'view' *action* still
   points to 'string:${object_url}', so that the 'view' tab, as well as